--- a/style.css
+++ b/style.css
@@ -1,70 +1,44 @@
-*{
+body {
+    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    box-sizing: border-box;
-}
-
-body{
-    background: #262a2f;
-    color:#333;
-}
-
-.search-box{
-    width: 600px;
-    background-color: #fff;
-    margin: 200px auto 0;
-    border-radius: 5px;
-}
-
-.row{
+    background-color: #121212;
+    color: #fff;
+    width: 100%;
+  }
+    
+  
+  header {
     display: flex;
     align-items: center;
-    padding: 10px 20px;
-}
-
-input{
-    flex:1;
-    height: 50px;
-    background: transparent;
-    border: 0;
-    outline: 0;
-    font-size: 18px;
-    color:#333;
-}
-button{
-    background: transparent;
-    border: 0;
-    outline: 0;
-}
-
-button .fa-solid{
-    width: 25px;
-    color: #555;
-    font-size: 22px;
-    cursor: pointer;
-}
-
-::placeholder{
-    color:#555;
-}
-.result-box ul{
-    border-top: 1px solid #999;
-    padding: 15px 10px;
-}
-
-.result-box ul li{
-    list-style: none;
-    border-radius: 3px;
-    padding: 15px 10px;
-    cursor: pointer;
-}
-
-.result-box ul li:hover{
-    background: #e9f3ff;
-}
-
-.result-box{
-    max-height: 300px;
-    overflow-y: scroll;
-}
+    justify-content: space-between;
+    background-color: #000000;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+    position: sticky;
+    top: 0;
+    z-index: 100;
+  }
+  
+  h1 {
+    text-align: center;
+    margin: 0;
+  }
+  
+  main {
+    padding-top: 10px;
+    padding: 20px;
+  }
+  
+  .main {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  
+  h2{
+    margin: 0;
+    padding: 10px;
+    padding-top: 0px;
+    padding-left: 0px;
+  }
