--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #121212;
+    background-color: #414141;
     color: #fff;
     width: 100%;
 }
@@ -12,8 +12,8 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #000000;
-    color: #fff;
+    background-color: #af0404;
+    color: #252525;
     padding: 20px;
     text-align: center;
     position: sticky;
